=============================================================================

==========================
 Changes from 1.7 -> 2.0:
==========================

  - Slightly improved minimal polynomial routine by suggestion of
    referee.
  - Use C-Hashfunction of orb 3.0 if it is there.
  - Many optimisations for GF2
  - Faster ScalarProduct for GF2


==========================
 Changes from 1.6 -> 1.7:
==========================

  - Introduce filters for cmats and cvecs to distinguish cases of q=p
    and q <= MAXSIZE_GF_INTERNAL.
  - Kernel method for cmat row access
  - Operation ScalarProductsRows with kernel method for prime fields
    used for condensation
  - Fixed infinite recursion in matrix multiplication because of
    Winograd method.
  - Fixed problem of polynomial factorisation over "DefaultField"
    instead of BaseDomain in Minimal and Characteristic polynomial
    routines.
  - New method for SumIntersectionMat for cmats. 
  - Use constructors for new objects in new interface, implement them.
  - Change all addresses to St Andrews.
  - Require GAP >= 4.4.9
  - Tune vector matrices interface and polish implementation.
  - Added a pickling/unpickling method for semi echelon basis.
  - Quite a few little changes to the vector/matrix interface
    after discussions in Braunschweig.
  - Make TraceMat compatible with GAP4R4.
  - Added matobjplist.g* from the dev library for compatibility with 4r4.
  - Put revision 324 as version 1.7 on the web.


==========================
 Changes from 1.5 -> 1.6:
==========================

  - Improve MinimalPolynomialMC, change calling convention.
  - Fixed a dangerous bug in matrix multiplication using the
    memory-saving Winograd trick.
  - Better Value method for CMats (do nothing a human would not also do)
  - Put AddMatrix and MultMatrix into interface and implement it for cmats
  - Put revision 298 as version 1.6 on the web.


==========================
 Changes from 1.4 -> 1.5:
==========================
