@@ -1,5 +1,4 @@
-Debug burschen.gp: zwei matrizen A und B, wo A*B falsch berechnet
-wird!
+Check OurErrorBreakQuit
 
 Hashfunktionen nicht Architekturneutral!
 Note dependencies
